src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_NumberAsEnumValue.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>    
	<ListBox SelectionMode="1" />
</DockPanel>

</Page>
